// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatRouteStoneEmit given: [case1] challenge:absent action when: [t0] formatRouteStoneEmit called with challenge:absent then: snapshot matches vision 1`] = `
"🦉 the way speaks for itself

🍂 what have you seen?
   ├─ ...
   │
   ├─ the articulation is absent
   │  └─ .behavior/v2026_03_08.feature/review/self/for.3.1.blueprint._.r1.design.md
   │
   ├─ a promise without words
   │  ├─ is not a promise
   │  └─ it is a daydream
   │
   └─ the way asks
      ├─ write what you found
      ├─ write what you didn't
      └─ then return 🍵

🗿 patience, friend
   │
   ├─ the pond barely rippled
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  the review is the work.
   │  │  not a gate to pass.
   │  │  not a step to complete.
   │  │  the work itself.
   │  │
   │  │  you are not the author.
   │  │  you are the reviewer.
   │  │
   │  └─
   │
   ├─ trust the way 🪷
   │  ├─
   │  │
   │  │  when you see this prompt
   │  │    pause and articulate what you found
   │  │
   │  │  when you found issues
   │  │    fix them before you continue
   │  │
   │  │  when you found no issues
   │  │    articulate why it holds
   │  │
   │  │  when you cannot articulate either
   │  │    you have not reviewed
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ .behavior/v2026_03_08.feature/review/self/for.3.1.blueprint._.r1.design.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.1.blueprint --as promised --that design
"
`;

exports[`formatRouteStoneEmit given: [case2] unguarded stone, passage allowed when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`formatRouteStoneEmit given: [case3] unguarded stone, passage blocked when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   └─ reason = blockers exceed threshold"
`;

exports[`formatRouteStoneEmit given: [case4] guarded stone, passage allowed when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 3.blueprint.md
   │  ├─ reviews
   │  │   └─ r1: review cmd
   │  │       ├─ finished 1.5s ✓
   │  │       └─ review: review.md
   │  └─ judges
   │      └─ j1: judge cmd
   │          └─ finished 0.5s ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`formatRouteStoneEmit given: [case5] guarded stone, passage blocked when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: review cmd
      │       ├─ finished 1.5s ✓
      │       ├─ review: review.md
      │       ├─ 3 blockers 🔴
      │       └─ 1 nitpick 🟠
      └─ judges
          └─ j1: judge cmd
              ├─ finished 0.5s ✗
              └─ reason: blockers exceed threshold"
`;

exports[`formatRouteStoneEmit given: [case6] blocked action (agent tried to approve) when: [t0] format is called with blocked action then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ ✗ only humans can approve
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck
      
      the human will run \`--as approved\` when ready."
`;

exports[`formatRouteStoneEmit given: [case7] route.stone.add plan mode when: [t0] format is called with plan mode then: snapshot matches 1`] = `
"🦉 another stone on the path

🗿 route.stone.add --mode plan
   ├─ stone  = 3.1.6.research.custom
   ├─ route  = .behavior/v2026_04_12.myroute
   ├─ source = @stdin
   ├─ preview
   │  ├─
   │  │
   │  │  investigate X:
   │  │  - what is X?
   │  │  - how does X relate to our wish?
   │  │
   │  └─
   └─ ✋ created = false, rerun with --mode apply to execute"
`;

exports[`formatRouteStoneEmit given: [case8] route.stone.add apply mode when: [t0] format is called with apply mode then: snapshot matches 1`] = `
"🦉 another stone on the path

🗿 route.stone.add --mode apply
   ├─ stone  = 3.1.6.research.custom
   ├─ route  = .behavior/v2026_04_12.myroute
   └─ created = .behavior/v2026_04_12.myroute/3.1.6.research.custom.stone
      └─ the way continues, run \`rhx route.drive\`"
`;
